--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="row align-items-center">
               
             <div class="col-md-7 mx-auto text-center">
-              <h1 class="heading gsap-reveal-hero">Srinivas P</h1>
+              <h1 class="heading gsap-reveal-hero">Srinivas Pasupuleti</h1>
               <h2 class="subheading gsap-reveal-hero">Turning ideas into clean, functional code.</h2>
             </div>
 
