--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/s.png">
 
   </head>
   <body data-spy="scroll" data-target=".site-nav-target" data-offset="200">
