--- a/index.html
+++ b/index.html
@@ -412,13 +412,23 @@
       <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">Certifications</span></h2>
       <span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>
     </div>
-    <div class="row justify-content-center">
-      <div class="col-md-8 text-center">
-        <img src="c1.png" width="300" height="200">
-        <img src="c2.png" width="300" height="200">
-        <img src="c3.png" width="300" height="200">
-      </div>
+    <div class="container">
+  <div class="row justify-content-center text-center">
+    <div class="col-md-4">
+      <img src="images/c1.png" width="100%" height="auto">
     </div>
+    <div class="col-md-4">
+      <img src="images/c2.png" width="100%" height="auto">
+    </div>
+    <div class="col-md-4">
+      <img src="images/c3.png" width="100%" height="auto">
+    </div>
+    <div class="col-md-4">
+      <img src="images/c4.jpg" width="100%" height="auto">
+    </div>
+  </div>
+</div>
+
   </div>
 </div>
 <!-- END INTERNSHIPS SECTION -->
